RESOLVED FIXED184423
Fix the selection assistant selectionView build
https://bugs.webkit.org/show_bug.cgi?id=184423
Summary Fix the selection assistant selectionView build
Jer Noble
Reported 2018-04-09 11:55:08 PDT
Fix the selection assistant selectionView build
Attachments
Patch (2.37 KB, patch)
2018-04-09 11:58 PDT, Jer Noble
no flags
Patch for landing (3.04 KB, patch)
2018-04-09 12:18 PDT, Jer Noble
no flags
Radar WebKit Bug Importer
Comment 1 2018-04-09 11:55:56 PDT
Jer Noble
Comment 2 2018-04-09 11:58:11 PDT
Wenson Hsieh
Comment 3 2018-04-09 12:07:37 PDT
Comment on attachment 337516 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=337516&action=review > Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:4498 > [[_webSelectionAssistant selectionView] setHidden:NO]; You might want to consider guarding the declaration of the selectionView property in UIKitSPI.h with ENABLE(MINIMAL_SIMULATOR) as well.
Jer Noble
Comment 4 2018-04-09 12:10:27 PDT
(In reply to Wenson Hsieh from comment #3) > Comment on attachment 337516 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=337516&action=review > > > Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:4498 > > [[_webSelectionAssistant selectionView] setHidden:NO]; > > You might want to consider guarding the declaration of the selectionView > property in UIKitSPI.h with ENABLE(MINIMAL_SIMULATOR) as well. Will do.
Jer Noble
Comment 5 2018-04-09 12:18:28 PDT
Created attachment 337522 [details] Patch for landing
WebKit Commit Bot
Comment 6 2018-04-09 12:58:22 PDT
Comment on attachment 337522 [details] Patch for landing Clearing flags on attachment: 337522 Committed r230448: <https://trac.webkit.org/changeset/230448>
WebKit Commit Bot
Comment 7 2018-04-09 12:58:23 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.