Fix the selection assistant selectionView build https://bugs.webkit.org/show_bug.cgi?id=184423 <rdar://problem/39288235>

Reviewed by Wenson Hsieh.

* Platform/spi/ios/UIKitSPI.h:
* UIProcess/ios/WKContentView.mm:
(-[WKContentView _didExitStableState]):
* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView _updateChangedSelection:]):


Canonical link: https://commits.webkit.org/199977@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@230448 268f45cc-cd09-0410-ab3c-d52691b4dbfc