Source/WebKit/Platform/spi/ios/UIKitSPI.h
@@ -497,7 +497,9 @@ typedef NS_ENUM (NSInteger, _UIBackdropMaskViewFlags) {
 - (void)setGestureRecognizers;
 - (void)willStartScrollingOrZoomingPage;
 - (void)willStartScrollingOverflow;
+#if !ENABLE(MINIMAL_SIMULATOR)
 @property (nonatomic, retain) UIWebSelectionView *selectionView;
+#endif
 @property (nonatomic, readonly) CGRect selectionFrame;
 @end
 
